KUBE/ingress-projects/awesome-1/nginx-flask-mysql/kube/frontend-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: qamre/awsome1-repo:frontend-v1
          ports:
            - containerPort: 80
