KUBE/ingress-projects/awesome-1/nginx-flask-mysql/kube/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306

  type: ClusterIP
